# devrob

./: .dockerignore  .gitignore  README.md
docker/: Dockerfile
pick_place/: CMakeLists.txt  README.md  package.xml
pick_place/config/: initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  ur5_controllers.yaml  ur5_manipulator.srdf
pick_place/include/pick_place/: pick_place_node.hpp
pick_place/launch/: pick_place_ignition.launch.py
pick_place/src/: pick_place_cpp_node.cpp  pick_place_node.cpp
pick_place/urdf/: ur5.ros2_control.xacro  ur5_vacuum.urdf.xacro
pick_place/worlds/: pick_place_world.sdf
scripts/: build_and_test.sh  run_in_docker.sh  run_pick_place.sh
src/pick_place/: CMakeLists.txt  README.md  package.xml
src/pick_place/config/: Untitled  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  ur.srdf  ur5_controllers.yaml  ur5_manipulator.srdf
src/pick_place/launch/: pick_place_ignition.launch.py
src/pick_place/scripts/: pick_place_py.py
src/pick_place/src/: pick_place_cpp.cpp  pick_place_cpp_node.cpp
src/pick_place/urdf/: ur5_macro.xacro
